# IviasClient

./: CMakeLists.txt  IviasClient.pro  LICENSE  README.md  adsmodel.cpp  adsmodel.h  advertisementslist.cpp  advertisementslist.h  clickscounter.cpp  clickscounter.h  constraints.h  dummypowerbackend.cpp  dummypowerbackend.h  globals.h  helper.cpp  helper.h  inputactivityfilter.cpp  inputactivityfilter.h  main.cpp  package.cpp  package.h  powerbackendiface.h  powermanager.cpp  powermanager.h  qmlsettingssingleton.cpp  qmlsettingssingleton.h  updater.cpp  updater.h  upowerbackend.cpp  upowerbackend.h
plugins/upowerbackend/: upowerbackend.cpp  upowerbackend.h  upowerbackend.pro  upowerbackend_global.h
qml/IviasClient/: AdsGrid.qml  AnimatedContainer.qml  MainView.qml  MirrorEffect.qml  Panel.qml  ScreenSaver.qml  Tile.qml  TitleItem.qml  UnlockEffect.qml  main.qml
upowerbackend/: CMakeLists.txt  powerbackends.json  upowerbackend.cpp  upowerbackend.h  upowerbackend.pro
